--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,12 +1,17 @@
 repository: edcork.github.io/docs
 
+# Uncomment the below to publish online. Comment them to generate a local preview.
+#url: edcork.github.io
+#baseurl: /docs
+#remote_theme: documentation-theme-jekyll
+
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
 
-topnav_title: Ed's portfolio
+topnav_title: Ed Cork's portfolio
 # this appears on the top navigation bar next to the home button
 
-site_title: Ed's portfolio
+site_title: Ed Cork's portfolio
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 #company_name: Copyright 2021 Google LLC
@@ -18,7 +23,7 @@ github_editme_path:
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-google_analytics: UA-66296557-1
+google_analytics: 
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
 
 host: 127.0.0.1
@@ -33,9 +38,9 @@ exclude:
   - vendor
 # these are the files and directories that jekyll will exclude from the build
 
-feedback_subject_line: Jekyll documentation theme
+feedback_subject_line: Ed's doc portfolio
 
-feedback_email: tomjoht@gmail.com
+feedback_email: edcork@gmail.com
 # used as a contact email for the Feedback link in the top navigation bar
 
 # feedback_disable: true
@@ -71,7 +76,7 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       sidebar: home_sidebar
@@ -91,7 +96,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       sidebar: home_sidebar
@@ -106,7 +111,7 @@ sidebars:
 - product2_sidebar
 - other
 
-description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
+description: "Examples of the type of stuff I work on"
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
@@ -115,8 +120,5 @@ description: "Intended as a documentation theme based on Jekyll for technical wr
 
 
 github: [metadata]
-url: edcork.github.io
-baseurl: /docs
-remote_theme: documentation-theme-jekyll
 
 # Copyright 2021 Google LLC
