--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -79,7 +79,7 @@ defaults:
       comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
-      sidebar: home_sidebar
+      sidebar: 
       topnav: topnav
   -
     scope:
@@ -105,11 +105,9 @@ defaults:
 # these are defaults used for the frontmatter for these file types
 
 sidebars:
-- home_sidebar
-- mydoc_sidebar
-- product1_sidebar
-- product2_sidebar
-- other
+- edit_sidebar
+- write_sidebar
+- design_sidebar
 
 description: "Examples of the type of stuff I work on"
 # the description is used in the feed.xml file
