--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,10 +11,10 @@ output: web
 topnav_title: Ed Cork's portfolio
 # this appears on the top navigation bar next to the home button
 
-site_title: Ed Cork's portfolio
+site_title: Ed's portfolio
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-#company_name: Copyright 2021 Google LLC
+company_name: Copyright 2024 Edward Cork
 # this appears in the footer
 
 github_editme_path: 
