--- a/docs/_data/topnav.yml
+++ b/docs/_data/topnav.yml
@@ -9,11 +9,13 @@ topnav_dropdowns:
     - title: Portfolio
       folderitems:
         - title: Writing
-          url: /write_landing_page.html
+          url: /writing_overview.html
         - title: Editing
-          url: /edit_landing_page.html
+          url: /editing_overview.html
         - title: Design
-          url: /design_landing_page.html
+          url: /design_overview.html
+        - title: Glossary
+          url: /glossary.html
 
 topnav:
 - title: Topnav
