--- a/docs/pdfconfigs/config_editing_pdf.yml
+++ b/docs/pdfconfigs/config_editing_pdf.yml
@@ -1,10 +1,10 @@
 destination: _site/
 url: "http://127.0.0.1:4011"
-baseurl: "/product1-pdf"
+baseurl: "/editing-pdf"
 port: 4011
-product: product1
-print_title: Product 1 documentation
-print_subtitle: version 1.0
+product: Editing
+print_title: Editing portfolio
+print_subtitle: 
 output: pdf
 defaults:
   -
@@ -16,4 +16,4 @@ defaults:
       comments: true
       search: true
 
-pdf_sidebar: product1_sidebar
+pdf_sidebar: editing_sidebar
