--- a/docs/_data/sidebars/design_sidebar.yml
+++ b/docs/_data/sidebars/design_sidebar.yml
@@ -2,14 +2,15 @@
 
 entries:
 - title: sidebar
-  product: 
+  product: Design
   version: 
   folders:
 
-  - title: Editing
+  - title: Design
     output: pdf
     type: frontmatter
     folderitems:
+    
     - title:
       url: /titlepage.html
       output: pdf
@@ -19,7 +20,16 @@ entries:
       output: pdf
       type: frontmatter
 
-  - title: Editing
+  - title: Overview
+    output: web, pdf
+    folderitems:
+    
+    - title: About these examples
+      url: /design_overview.html
+      output: web, pdf
+      type: homepage
+        
+  - title: Content audits
     output: web, pdf
     folderitems:
 
@@ -35,20 +45,12 @@ entries:
       url: /edit_ts_ea_edited.html
       output: web, pdf
 
-  - title: Installation
+  - title: Term lists
     output: web, pdf
     folderitems:
 
     - title: About Ruby, Gems, Bundler, etc.
       url: /mydoc_about_ruby_gems_etc.html
-      output: web, pdf
-
-    - title: Install Jekyll on Mac
-      url: /mydoc_install_jekyll_on_mac.html
-      output: web, pdf
-
-    - title: Install Jekyll on Windows
-      url: /mydoc_install_jekyll_on_windows.html
       output: web, pdf
 
   
