--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -1,7 +1,7 @@
 # Note:
 # If you are using the createtag script, don't leave a blank line at the end of this file.
 # In other words, the last line must be the last tag in the allowed-tags list.
-allowed-tags:
+# allowed-tags:
   - getting_started
   - content_types
   - navigation
