--- a/docs/_data/sidebars/write_sidebar.yml
+++ b/docs/_data/sidebars/write_sidebar.yml
@@ -43,34 +43,31 @@ entries:
 
         - title: Integrate with Azure for CMP FinOps
           url: /finops_azure.html
-          output: web
+          output: web, pdf
           
         - title: Integrate with OCI for CMP FinOps
           url: /finops_oci.html
-          output: web
-
-    - title: Example troubleshooting(original)
-      url: /edit_ts_ea_original.html
-      output: web, pdf
-      
-    - title: Example troubleshooting (Edited)
-      url: /edit_ts_ea_edited.html
-      output: web, pdf
+          output: web, pdf
 
   - title: 'Example 2: Installation docs'
     output: web, pdf
     folderitems:
 
-    - title: About Ruby, Gems, Bundler, etc.
-      url: /mydoc_about_ruby_gems_etc.html
-      output: web, pdf
+    - title: Integrate with cloud platforms for CMP FinOps
+      url: /finops_landing.html
+      output: web, pdf      
+      subfolders:
+      
+      - title: Integrations
+        output: web
+        subfolderitems:
 
-    - title: Install Jekyll on Mac
-      url: /mydoc_install_jekyll_on_mac.html
-      output: web, pdf
-
-    - title: Install Jekyll on Windows
-      url: /mydoc_install_jekyll_on_windows.html
-      output: web, pdf
+        - title: Integrate with Azure for CMP FinOps
+          url: /finops_azure.html
+          output: web, pdf
+          
+        - title: Integrate with OCI for CMP FinOps
+          url: /finops_oci.html
+          output: web, pdf
 
   
