--- a/docs/_data/sidebars/write_sidebar.yml
+++ b/docs/_data/sidebars/write_sidebar.yml
@@ -73,5 +73,9 @@ entries:
         - title: Update the system configuration
           url: /system_config.html
           output: web, pdf
+          
+        - title: Check the firewall settings
+          url: /firewall_settings.html
+          output: web, pdf
 
   
