--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: "Ed Cork's tech writing portfolio"
 description: Examples of the type of projects I have worked on.
 theme: just-the-docs
 
-url: edcork.github.io/docs
+url: https://edcork.github.io/
 
 aux_links:
   #Template Repository: https://github.com/just-the-docs/just-the-docs-template
