--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ aux_links:
 
 defaults:
   - scope:
-      path: "docs" # an empty string here means all files in the project
+      path: # "docs" # an empty string here means all files in the project
       type: "pages"
     values:
       layout: "default"
