--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,7 +1,13 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-gem "jekyll", "~> 4.4.1" # installed by `gem jekyll`
-# gem "webrick"        # required when using Ruby >= 3 and Jekyll <= 4.2.2
+# 1. The GitHub Pages environment (Locks Jekyll to v3.9)
+gem "github-pages", group: :jekyll_plugins
 
-gem "just-the-docs", "0.10.1" # pinned to the current release
-# gem "just-the-docs"        # always download the latest release
+# 2. The Remote Theme plugin (For hosting on GitHub)
+gem "jekyll-remote-theme"
+
+# 3. The Local Theme files (So you can use @import locally)
+gem "just-the-docs"
+
+# 4. SEO Tags
+gem "jekyll-seo-tag"
