--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
 title: "Ed Cork's tech writing portfolio"
 description: Examples of the type of projects I have worked on.
-theme: just-the-docs
-# remote_theme: just-the-docs/just-the-docs
+# theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 plugins:
-#  - jekyll-remote-theme
+  - jekyll-remote-theme
   - jekyll-seo-tag
 
 url: https://edcork.github.io/
