--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,6 +6,8 @@ remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
+  - jekyll-sitemap 
+  - jekyll-robots-txt
 
 url: https://edcork.github.io/
 
